Fixes RT #32979; correct alignment of list items and their bullets.
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@16105 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/WikiStickies/css/WikiStickiesSpecialPage.css
+++ b/extensions/wikia/WikiStickies/css/WikiStickiesSpecialPage.css
@@ -67,13 +67,14 @@
 .wikistickiesfeed ul {
     font-family: Arial, sans-serif;
     font-size: 13px;
+    height: 1%; /* For IE7 */
+    padding-left: 1.25em;
     position: relative;
 }
 .wikistickiesfeed ul li {
     width: 48%;
     line-height: 1.75;
     margin-bottom: 0;
-    list-style-position: inside;
 }
 .wikistickiesfeed .secondcolumn {
     margin-left: 50%;
